--- a/src/app/pages/credentials/credentials.component.scss
+++ b/src/app/pages/credentials/credentials.component.scss
@@ -260,6 +260,19 @@ h1 {
   gap: 16px;
 }
 
+.wallet-selection {
+  h4 {
+    margin: 0 0 12px 0;
+    color: var(--mat-card-title-text-color);
+    font-size: 14px;
+  }
+}
+
+.wallet-select-field {
+  width: 100%;
+  max-width: 300px;
+}
+
 .donation-amounts {
   h4 {
     margin: 0 0 12px 0;
