--- a/src/app/components/navigation/navigation.html
+++ b/src/app/components/navigation/navigation.html
@@ -1,5 +1,5 @@
 @if (hasState()) {
-<button mat-icon-button class="back-button" title="Go back • Right-click or long-press for history" (click)="goBack()"
+<button mat-icon-button class="back-button hide-small" title="Go back • Right-click or long-press for history" (click)="goBack()"
   (contextmenu)="onRightClick($event)" (touchstart)="onTouchStart($event)" (touchend)="onTouchEnd($event)"
   (touchcancel)="onTouchCancel($event)">
   <mat-icon>arrow_back</mat-icon>
