--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -26,6 +26,8 @@
       <div class="profile-badges">
         @for (badge of topBadges(); track $index) {
         @let parsedBadge = parsedBadges()[$index];
+        @let isTimedOut = isBadgeTimedOut()[$index];
+        @if (!isTimedOut) {
         <a [routerLink]="['/p', npub() || pubkey(), 'badges']" class="badge-item"
           (mouseenter)="onBadgeMouseEnter($event, badge)" (mouseleave)="onBadgeMouseLeave()">
           @if (isBadgeFailed()[$index]) {
@@ -36,7 +38,7 @@
           } @else if (parsedBadge && (parsedBadge.thumb || parsedBadge.image)) {
           <!-- Show badge image when loaded -->
           <img [src]="parsedBadge.thumb || parsedBadge.image" [alt]="parsedBadge.name || 'Badge'"
-             class="badge-image" loading="lazy"
+            [title]="parsedBadge.name || 'Badge'" class="badge-image" loading="lazy"
             (error)="onBadgeImageError($event)" />
           } @else if (isBadgeLoading()[$index]) {
           <!-- Show loading spinner while badge is loading -->
@@ -50,6 +52,7 @@
           </div>
           }
         </a>
+        }
         }
       </div>
       }
