--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
@@ -161,10 +161,10 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.6) 70%, transparent 100%);
-    padding: 24px 12px 16px;
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
+    // background: linear-gradient(to top, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.6) 70%, transparent 100%);
+    // padding: 24px 12px 16px;
+    // -webkit-backdrop-filter: blur(20px);
+    // backdrop-filter: blur(20px);
 
     .filter-chips {
       display: flex;
