Add horizontal class binding to video preview container and cleanup filters on preview restart

--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
@@ -76,7 +76,7 @@
   </div>
   } @else {
   <!-- Video Preview -->
-  <div class="preview-container">
+  <div class="preview-container" [class.horizontal]="aspectRatio() === 'horizontal'">
     <video #videoPreview [src]="recordedUrl()!" controls autoplay class="video-preview"></video>
   </div>
   }
