--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
@@ -38,9 +38,11 @@
   }
 
   .filter-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: contain;
     display: block;
   }
 
