--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.scss
@@ -38,11 +38,10 @@
   }
 
   .filter-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    // Canvas maintains its internal aspect ratio
+    // max-width/height ensure it fits within container while centering
+    max-width: 100%;
+    max-height: 100%;
     display: block;
   }
 
