Add download button to save recorded video to device

--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
@@ -122,6 +122,10 @@
       <mat-icon>replay</mat-icon>
       Retake
     </button>
+    <button mat-button (click)="downloadVideo()" matTooltip="Save video to device">
+      <mat-icon>download</mat-icon>
+      Download
+    </button>
     <button mat-flat-button (click)="useVideo()">
       <mat-icon>check</mat-icon>
       Use Video
